--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <div id="bmi-status"></div>
         </div>   
     </div>
+    <p id="pera"> -Developed by Manish,Karthikeya,Srinath </P>
     
 </body>
 </html>
