--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Old+Standard+TT:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="container">  
+    <div class="container style="text-align:center;">  
         <h1>BMI Calculator</h1>
         <label>
             <input id="h-input" type="number" placeholder="Enter Your Height in Centimeters: ">
